[package]
name = "cosmic-monitor-hack"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-client = "0.31.5"
wayland-protocols = { version = "0.32.3", features = ["client", "staging"] }
calloop = { version = "0.14.0", features = ["executor"] }
calloop-wayland-source = "0.4.0"
log = "0.4.22"
env_logger = "0.11.5"
kdl = "6.5.0"
