[package]
name = "cosmic-monitor-positiond"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-client = "0.31.5"
wayland-protocols = { version = "0.32.3", features = ["client", "staging"] }
calloop = { version = "0.14.0", features = ["executor"] }
calloop-wayland-source = "0.4.0"
log = "0.4.22"
env_logger = "0.11.5"
toml_edit = "0.22"
clap = { version = "4.5", features = ["derive"] }
cosmic-randr = { git = "https://github.com/pop-os/cosmic-randr" }
cosmic-randr-shell = { git = "https://github.com/pop-os/cosmic-randr" }
tachyonix = "0.3"
tokio = { version = "1", features = ["signal", "sync", "time", "rt-multi-thread", "macros"] }

[features]
# Udev hotplug support (requires libudev-dev to be installed)
default = ["autodetect"]
autodetect = ["udev"]

[dependencies.udev]
version = "0.9"
optional = true
